--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,5 +4,24 @@
   "main": "src/index.tsx",
   "compatibility_date": "2024-01-01",
   "compatibility_flags": ["nodejs_compat"],
-  "pages_build_output_dir": "./dist"
+  "pages_build_output_dir": "./dist",
+  "vars": {
+    "ENVIRONMENT": "development"
+  },
+  "r2_buckets": [
+    {
+      "binding": "R2",
+      "bucket_name": "bridge-agent-files"
+    }
+  ]
+  // 创建R2存储桶命令:
+  // wrangler r2 bucket create bridge-agent-files
+  //
+  // 生产环境的密钥将通过 wrangler secret put 命令设置:
+  // wrangler secret put OPENAI_API_KEY
+  // wrangler secret put ANTHROPIC_API_KEY
+  // wrangler secret put GEMINI_API_KEY
+  // wrangler secret put QWEN_API_KEY
+  // wrangler secret put PINECONE_API_KEY
+  // wrangler secret put PINECONE_INDEX_URL
 }
